--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.23.0",
+    "ioredis": "^5.6.1",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.0",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
+    "rate-limit-redis": "^4.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
