--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.0",
     "framer-motion": "^12.23.0",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "rate-limit-redis": "^4.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
